# pacdb

./: .gitignore  DP implementation.ipynb  Dockerfile  Makefile  README.txt  all_pac_errors.ipynb  all_results_table.txt  all_results_table_2.txt  ap-duckdb-q1-step1.ipynb  ap-duckdb-q1-step3.ipynb  ap-duckdb-q10-customer-step1.ipynb  ap-duckdb-q10-customer-step3.ipynb  ap-duckdb-q12-customer-step1.ipynb  ap-duckdb-q12-customer-step3.ipynb  ap-duckdb-q13-customer-step1.ipynb  ap-duckdb-q13-customer-step3.ipynb  ap-duckdb-q14-customer-step1.ipynb  ap-duckdb-q14-customer-step3.ipynb  ap-duckdb-q15-customer-step1.ipynb  ap-duckdb-q15-customer-step3.ipynb  ap-duckdb-q2-step1.ipynb  ap-duckdb-q2-step3.ipynb  ap-duckdb-q3-step1.ipynb  ap-duckdb-q3-step3.ipynb  ap-duckdb-q4-step1.ipynb  ap-duckdb-q4-step3.ipynb  ap-duckdb-q5-customer-step1.ipynb  ap-duckdb-q5-customer-step3.ipynb  ap-duckdb-q5-orders-step1.ipynb  ap-duckdb-q5-orders-step3.ipynb  ap-duckdb-q6-customer-step1.ipynb  ap-duckdb-q6-customer-step3.ipynb  ap-duckdb-q7-customer-step1.ipynb  ap-duckdb-q7-customer-step3.ipynb  ap-duckdb-q8-customer-step1.ipynb  ap-duckdb-q8-customer-step3.ipynb  ap-duckdb-q9-customer-step1.ipynb  ap-duckdb-q9-customer-step3.ipynb  autopac-duckdb-step1.ipynb  autopac-duckdb-step1.py  (+127 more)
.devcontainer/: devcontainer.json
benchmark-hyperfine/: hyperfine.json  hyperfine_sorted.json  plot_whisker.py  readme.txt
benchmark-q5-optimization/: ap-duckdb-q5-customer-new-step1.py  ap-duckdb-q5-customer-no-prejoin-step1.py  ap-duckdb-q5-customer-step1.py  readme.txt  run.sh
benchmarks/: merged.json  q1-customer.sql.json  q12-customer.sql.json  q13-customer.sql.json  q14-customer.sql.json  q15-customer.sql.json  q17-customer.sql.json  q19-customer.sql.json  q20-customer.sql.json  q21-customer.sql.json  q22-customer.sql.json  q3-customer.sql.json  q4-customer.sql.json  q5-customer.sql.json  q6-customer.sql.json  q7-customer.sql.json  q8-customer.sql.json  q9-customer.sql.json
data/: augment_heart.py  heart.parquet
df_vs_sql/: dataframe.txt  df vs sql.txt  sql.txt
dp/: dp_count_order.ipynb  noisy_counts_experiment_results.parquet  noisy_sum_experiment_results.parquet  noisy_var_experiment_results.csv
experiment_outputs/: count aggregation on skewed data-errors.pkl  count aggregation on skewed data-results.pkl  count-errors.pkl  count-results.pkl  max-errors.pkl  max-results.pkl  multiple predicates, apply first-errors.pkl  multiple predicates, apply first-results.pkl  multiple predicates: filter, sample, filter-errors.pkl  multiple predicates: filter, sample, filter-results.pkl  singular result-errors.pkl  singular result-results.pkl  sum-errors.pkl  sum-results.pkl
gnuplot/: breakdown-sf1-r6615.tsv  breakdown.gnuplot  comparison-sf.gnuplot  comparison-sf10.tsv  comparison-sf100.tsv  penalty.gnuplot  penalty.tsv  readme.txt
noise_comparison/: anisotropic.csv  anisotropic_Father Avg.pkl  (+14 more)
(+311 files in other folders)
