[project]
name = "pacdb"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "appnope==0.1.4",
    "asttokens==3.0.0",
    "comm==0.2.2",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "debugpy==1.8.12",
    "decorator==5.1.1",
    "duckdb==1.0.0",
    "executing==2.2.0",
    "faker==23.3.0",
    "fonttools==4.55.8",
    "ipykernel==6.29.5",
    "ipython==8.32.0",
    "jedi==0.19.2",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "kiwisolver==1.4.8",
    "matplotlib==3.8.1",
    "matplotlib-inline==0.1.6",
    "mypy>=1.15.0",
    "nest-asyncio==1.6.0",
    "numpy==1.26.0",
    "packaging==24.2",
    "pandas==1.5.3",
    "papermill>=2.6.0",
    "parse>=1.20.2",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "pillow==11.1.0",
    "platformdirs==4.3.6",
    "plottable>=0.1.5",
    "polars>=1.27.1",
    "prompt-toolkit==3.0.50",
    "psutil==6.1.1",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyarrow==14.0.1",
    "pydantic>=2.11.3",
    "pygments==2.19.1",
    "pyparsing==3.2.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.1",
    "pyzmq==26.2.1",
    "ruff>=0.11.7",
    "six==1.17.0",
    "stack-data==0.6.3",
    "tornado==6.4.2",
    "traitlets==5.14.3",
    "typing-extensions==4.12.2",
    "wcwidth==0.2.13",
]

[tool.ruff]
show-fixes = true
line-length = 150
extend-select = ["I"]

[tool.mypy]
strict = false
ignore_missing_imports = true
disallow_untyped_defs = false
