[project]
name = "pacdb"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.2.2",
    "ipykernel>=6.29.5",
    "numpy>=2.2.5",
    "papermill>=2.6.0",
    "parse>=1.20.2",
    "polars>=1.29.0",
    "pyarrow>=20.0.0",
]

[tool.ruff]
show-fixes = true
line-length = 150
extend-select = ["I"]

[tool.mypy]
strict = false
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.harlequin]
default_profile = "tpch"

[tool.harlequin.profiles.tpch]
limit = 1000
conn_str = ["data/tpch/tpch.duckdb"]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.8",
]
